[package]
name = "rusty_rts"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# Graphics
wgpu = "0.17"
winit = "0.28"
pollster = "0.3"         # For async to sync conversion in wgpu
bytemuck = { version = "1.14", features = ["derive"] } # For GPU data conversion
glam = "0.24"            # Math library for graphics
image = "0.24"           # Image loading

# ECS and game logic
bevy_ecs = "0.11"        # Just the ECS part of Bevy
ron = "0.8"              # Rusty Object Notation for config files
noise = "0.8"            # For procedural terrain generation
pathfinding = "4.3"      # A* implementation

# Networking
bincode = "1.3"          # Binary serialization
serde = { version = "1.0", features = ["derive"] }
quinn = "0.10"           # QUIC protocol implementation (UDP+TLS)

# Utils
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"           # Error handling
thiserror = "1.0"        # Error definition

[profile.dev.package."*"]
# Compile dependencies with optimizations in dev mode
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"